--- a/package.json
+++ b/package.json
@@ -13,25 +13,27 @@
   "dependencies": {
     "apollo-server": "^2.1.0",
     "apollo-server-express": "^2.1.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
+    "bcrypt": "^2.0.0",
     "cors": "^2.8.4",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
     "express-graphql": "^0.6.12",
     "graphql": "^14.0.2",
-    "graphql-sequelize": "^9.0.1",
-    "graphql-tools": "^4.0.0",
+    "graphql-sequelize": "^9.0.4",
+    "graphql-tools": "^4.0.3",
     "merge-graphql-schemas": "^1.5.7",
     "morgan": "^1.9.1",
-    "pg": "^7.5.0",
+    "pg": "^7.6.0",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.39.0",
+    "sequelize": "^4.41.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.5"
   }
 }
