--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "pg": "^7.6.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.41.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "uuid-validate": "0.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
