--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
     "express-graphql": "^0.6.12",
     "graphql": "^14.0.2",
     "graphql-sequelize": "^9.0.4",
